[package]
name = "opencl3-select"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "doc_cfg" ]

[lib]

[dependencies]
opencl3 = { version = "0.9.5" }
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.26.1", optional = true }
serde = { version = "1.0.197", features = [ "derive" ], optional = true }
serde_json = { version = "1.0.114", optional = true }
serde_toml = { version = "0.0.1", optional = true }
serde_xml = { version = "0.9.1", optional = true }
serde_yaml = { version = "0.9.32", optional = true }
thiserror = "1.0.57"

[features]
default = [ "serde", "display" ]
serde = ["dep:serde", "dep:serde_json", "dep:serde_xml", "dep:serde_yaml", "dep:serde_toml"]
display = [ "dep:crossterm", "dep:ratatui" ]
